route_table.tf
resource "aws_route_table" "rt" {
  vpc_id = aws_vpc.main.id

  # route for public 
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.gw.id
  }

  tags = {
    Name = "rt-route"
  }
}
